--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
     "@next/font": "^13.5.3",
+    "gh": "^2.8.9",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "sass": "^1.68.0"
   },
   "devDependencies": {
+    "@iconify/react": "^4.1.1",
     "eslint": "latest",
     "eslint-config-next": "latest"
   }
