--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@glidejs/glide": "^3.6.0",
     "@next/font": "^13.5.3",
+    "classnames": "^2.3.2",
     "gh": "^2.8.9",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hide-on-scroll": "^1.1.4",
     "sass": "^1.68.0"
   },
   "devDependencies": {
