--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@glidejs/glide": "^3.6.0",
-    "@next/font": "^13.5.3",
-    "classnames": "^2.3.2",
-    "gh": "^2.8.9",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-hide-on-scroll": "^1.1.4",
-    "sass": "^1.68.0"
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "embla-carousel-autoplay": "^8.1.1",
+    "embla-carousel-react": "^8.1.1"
   },
   "devDependencies": {
-    "@iconify/react": "^4.1.1",
-    "eslint": "latest",
-    "eslint-config-next": "latest"
+    "@next/third-parties": "^14.2.3",
+    "@picocss/pico": "^2.0.6",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
