--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "embla-carousel-autoplay": "^8.1.1",
+    "embla-carousel-react": "^8.1.3",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1",
-    "embla-carousel-autoplay": "^8.1.1",
-    "embla-carousel-react": "^8.1.1"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@next/third-parties": "^14.2.3",
